--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.7"
-    
   }
 }
